@@ -1,5 +1,5 @@
 --extra-index-url https://pypi.anaconda.org/OpenEye/simple
-OpenEye-toolkits >= 2020.2.2
+OpenEye-toolkits >= 2024.1.1
 numpy
 jsonschema >= 2.6.0
 rcsb.utils.io >= 1.48
