@@ -42,11 +42,12 @@ coverage_cutoff = 75
 #           4-Sep-2019 jdw Add support for multiple fixtures (3)
 #          11-Dec-2019 jdw Py38 version
 #           9-Jan-2023 aae updates for tox 4
+#          16-Oct-2024 dwp Py310
 #
 ##
 [tox]
 # The complete list of supported test environments to setup and invoke
-envlist = format_pep8-{py39}, lint_pylint-{py39}, format_black-{py39}, test_coverage-{py39}
+envlist = format_pep8-{py310}, lint_pylint-{py310}, format_black-{py310}, test_coverage-{py310}
 #
 minversion = 3.4.0
 skip_missing_interpreters = true
@@ -57,9 +58,9 @@ passenv = CONFIG_SUPPORT_TOKEN_ENV,OE_LICENSE
 allowlist_externals = echo
 commands =
     echo "Starting default tests in testenv"
-basepython = py39: python3.9
+basepython = py310: python3.10
 
-[testenv:py39]
+[testenv:py310]
 description = 'Run unit tests (unittest runner) using {envpython}'
 platform=
        macos: darwin
@@ -83,7 +84,7 @@ commands =
     echo "Completed {envname}"
 
 #
-[testenv:format_pep8-py39]
+[testenv:format_pep8-py310]
 description = 'Run selected PEP8 compliance checks (flake8)'
 platform=
        macos: darwin
@@ -99,7 +100,7 @@ commands =
     flake8 --max-line-length=185 --ignore=D,I,E203,W503  {[local_settings]source_paths}
 
 #
-[testenv:lint_pylint-py39]
+[testenv:lint_pylint-py310]
 description = 'Run linting compliance checks (pylint)'
 platform=
        macos: darwin
@@ -113,7 +114,7 @@ commands =
     echo "Completed {envname}"
 
 #
-[testenv:format_black-py39]
+[testenv:format_black-py310]
 description = 'Run format compliance checks (black)'
 platform=
        macos: darwin
@@ -129,7 +130,7 @@ commands =
     echo "Completed {envname}"
 
 #
-[testenv:test_coverage-py39]
+[testenv:test_coverage-py310]
 description = 'Run test coverage analysis'
 platform=
        macos: darwin
